Adding exception handling + Adding download ffmepg method

--- a/Xamarin.FFmpeg/Xamarin.FFmpeg.csproj
+++ b/Xamarin.FFmpeg/Xamarin.FFmpeg.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\FFmpegNotDownloadedException.cs" />
     <Compile Include="Exceptions\FFmpegNotInitializedException.cs" />
     <Compile Include="FFmpegLibrary.cs" />
     <Compile Include="FFmpegSource.cs" />
